src/test/deca/syntax/invalid/block_order_invalid.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2022

{
        int b;
        println("Hello");
        int a;
        printx("HEHEHE");
}
